k8s_deployment/kompose/model-pipeline-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: model-pipeline
  name: model-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: model-pipeline
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: model-pipeline
    spec:
      containers:
        - env:
            - name: GOOGLE_APPLICATION_CREDENTIALS
              value: /secrets/ciri-cloud-storage.json
            - name: MLFLOW_TRACKING_URI
              value: http://mlflow:5000/
            - name: MODEL_NAME
              value: ciri_model
          image: ghcr.io/canirecycleit/model_training_pipeline/ciri_model_pipeline:latest
          imagePullPolicy: Always
          name: ciri-model-pipeline
          resources: {}
          volumeMounts:
            - mountPath: /secrets
              name: ciri-cloud-storage
      restartPolicy: Always
      volumes:
        - name: ciri-cloud-storage
          secret:
            secretName: ciri-cloud-storage
status: {}
