k8s_deployment/kompose/shell-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    io.kompose.service: shell
  name: shell
spec:
  containers:
    - image: nginx
      name: linux-shell
      volumeMounts:
        - mountPath: /secrets
          name: ciri-cloud-storage
        - mountPath: /db
          name: db-data
  restartPolicy: Never
  volumes:
    - name: ciri-cloud-storage
      secret:
        secretName: ciri-cloud-storage
    - name: db-data
      gcePersistentDisk:
        pdName: gce-db-disk
        fsType: ext4
status: {}
