k8s_deployment/kompose/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/frontend: "true"
        io.kompose.service: ui
    spec:
      containers:
        - image: ghcr.io/canirecycleit/frontend_ui/ciri_frontend:latest
          name: ciri-ui
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
