k8s_deployment/kompose/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mlflow
  name: mlflow
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: mlflow
  type: NodePort
