k8s_deployment/kompose/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: ui
  type: NodePort
