k8s_deployment/kompose/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciri-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port: 
                number: 8080
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                number: 8080
        - path: /mlflow/
          pathType: Prefix
          backend:
            service:
              name: mlflow
              port:
                number: 5000
